profilelist1exp/unpackaged/objects/Solution_Mirror__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Actions_Available__c</fullName>
        <formula>HYPERLINK(&apos;apex/SolutionRefresh?id=&apos;+ Id , IMAGE(&quot;resource/1352267424000/OSC_Refresh&quot;, &apos;Refresh&apos;), &apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSC_Regional_ID__c</fullName>
        <externalId>true</externalId>
        <label>OSC Regional ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSC_Solution_ID__c</fullName>
        <formula>SUBSTITUTE (OSC_Regional_ID__c , LEFT( OSC_Regional_ID__c , FIND(&quot;:&quot;, OSC_Regional_ID__c )), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSC Solution ID</label>
        <type>Text</type>
    </fields>
    <label>Solution Archive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Solution Archive Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions Archive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>